# home-dashboard

./: .gitignore  README.md  home_dashboard.db  pyproject.toml  ruff.toml
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  app.css  main.tsx  theme.ts
frontend/src/components/: Appliances.tsx  Dashboard.tsx
src/home_dashboard/: __init__.py  crud.py  db.py  main.py  models.py  schemas.py
src/home_dashboard/routers/: __init__.py  appliances.py  tasks.py  temperature.py
tests/: test_appliances.py  test_bulk_delete.py  test_dashboard.py  test_html_ui.py  test_intervals.py  test_task_completion_advance.py  test_temperature_rooms.py
