[project]
name = "home-dashboard"
version = "0.2.0"
description = "Home dashboard API + React frontend for housekeeping tasks and environment tracking"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "pydantic>=2.0",
  "aiosqlite",
  "greenlet"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/home_dashboard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
